--- a/sass/_curriculum.scss
+++ b/sass/_curriculum.scss
@@ -6,7 +6,9 @@
     fill:none;
   }
   path{
-    stroke-width: 2px;
+    stroke-width: 5px;
+    stroke-linecap: round;
+    stroke-linejoin: round;
     &.red{
       stroke:$brand-primary;
     }
@@ -21,5 +23,14 @@
   }
   #center-mark{
     fill:transparentize(#ff0,.5);
+  }
+  #debug{
+    use{
+      fill:rgba(0,0,255,0.2);
+      @include transition(.3);
+      &:hover{
+        fill: rgba(0, 0, 255, 0.7);
+      }
+    }
   }
 }
