--- a/css/screen.css
+++ b/css/screen.css
@@ -8608,11 +8608,16 @@ button.close {
     display: none !important;
   }
 }
+/* line 1, ../sass/_main.scss */
+body, html {
+  overflow: hidden;
+}
+
 /* line 1, ../sass/_curriculum.scss */
 #svg {
   display: block;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
 }
 /* line 8, ../sass/_curriculum.scss */
 #svg path {
