--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -4,6 +4,8 @@
  * <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" /> */
 
 @import "variables";
+@import "font-awesome/variables";
+@import "font-awesome/path";
 @import "compass/reset";
 @import "bootstrap";
 @import "main";
