--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -8,5 +8,6 @@
 @import "font-awesome/path";
 @import "compass/reset";
 @import "bootstrap";
-@import "main";
 @import "curriculum";
+@import "main";
+@import "header";
