--- a/sass/_curriculum.scss
+++ b/sass/_curriculum.scss
@@ -1,6 +1,7 @@
 #svg{
   display: block;
   position: absolute;
+  top:0;
   width:100%;
   height:100%;
   use,path{
@@ -43,10 +44,10 @@
     }
   }
   .year{
-    alignment-baseline: central;
+    alignment-baseline: middle;
     font-size:28px;
-    font-weight: bold;
-    font-family: "Courier 10 Pitch", Courier, monospace;
+    font-weight: 700;
+    font-family: $font-family-base;
     text-anchor: middle;
   }
 }
