--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -1,3 +1,14 @@
 body,html{
   overflow: hidden;
+  height:100%;
+}
+header{
+  width:760px;
+  max-width: 100%;
+  margin: auto;
+  text-align: center;
+}
+h1{
+  font-weight: 900;
+  font-size:200px;
 }
