--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -16,7 +16,7 @@ h1 {
   letter-spacing: -.05em;
   text-transform: lowercase;
   &:after{
-    //content:$fa-var-lightbulb-o;
+    //content:$fa-var-camera;
     font-family: 'FontAwesome';
   }
 }
