--- a/css/screen.css
+++ b/css/screen.css
@@ -8624,8 +8624,53 @@ button.close {
   top: 0;
   width: 100%;
   height: 100%;
+  background: #fff;
+  /*
+  #items{
+    path{
+      fill:none;
+      mix-blend-mode:multiply;
+    }
+    .icon{
+      mix-blend-mode: multiply;
+      circle{
+        fill-opacity: .2;
+        fill:none;
+        stroke-width: 2px;
+        stroke-miterlimit: 0;
+      }
+      text, text tspan{
+        cursor: default;
+      }
+      &.lightbulb-o{
+        text{
+          font-size:1.5em;
+        }
+      }
+    }
+  }
+  #debug{
+    use{
+      fill: #000;
+    }
+  }
+  #dates-lines{
+    .horizontal{
+        .year{
+          @include translate(20px,0);
+        }
+    }
+  }
+  .year{
+    font-size:28px;
+    font-weight: 700;
+    font-family: $font-family-base;
+    //text-anchor: middle;
+    //alignment-baseline: middle;
+  }
+  */
 }
-/* line 10, ../sass/_curriculum.scss */
+/* line 11, ../sass/_curriculum.scss */
 #svg path {
   stroke-width: 5px;
   stroke-linecap: round;
@@ -8634,50 +8679,49 @@ button.close {
   -o-transition: 0.3s;
   transition: 0.3s;
 }
-/* line 16, ../sass/_curriculum.scss */
+/* line 17, ../sass/_curriculum.scss */
 #svg path:hover {
   stroke-width: 10px;
 }
-/* line 21, ../sass/_curriculum.scss */
-#svg #items path {
-  fill: none;
+/* line 67, ../sass/_curriculum.scss */
+#svg .item {
   mix-blend-mode: multiply;
 }
-/* line 25, ../sass/_curriculum.scss */
-#svg #items .icon {
+/* line 73, ../sass/_curriculum.scss */
+#svg .icon {
   mix-blend-mode: multiply;
+  cursor: pointer;
 }
-/* line 27, ../sass/_curriculum.scss */
-#svg #items .icon circle {
-  fill-opacity: .2;
-  fill: none;
-  stroke-width: 2px;
-  stroke-miterlimit: 0;
+/* line 79, ../sass/_curriculum.scss */
+#svg .dateGroup .dateWrapperGroup {
+  -webkit-transform: rotate(0deg);
+  -ms-transform: rotate(0deg);
+  -o-transform: rotate(0deg);
+  transform: rotate(0deg);
+  -webkit-transition: 0.5s;
+  -o-transition: 0.5s;
+  transition: 0.5s;
 }
-/* line 33, ../sass/_curriculum.scss */
-#svg #items .icon text, #svg #items .icon text tspan {
-  cursor: default;
+/* line 84, ../sass/_curriculum.scss */
+#svg .dateGroup.horizontal .dateWrapperGroup {
+  -webkit-transform: rotate(90deg);
+  -ms-transform: rotate(90deg);
+  -o-transform: rotate(90deg);
+  transform: rotate(90deg);
 }
-/* line 37, ../sass/_curriculum.scss */
-#svg #items .icon.lightbulb-o text {
-  font-size: 1.5em;
+/* line 86, ../sass/_curriculum.scss */
+#svg .dateGroup.horizontal .dateWrapperGroup.right {
+  -webkit-transform: rotate(-90deg);
+  -ms-transform: rotate(-90deg);
+  -o-transform: rotate(-90deg);
+  transform: rotate(-90deg);
 }
-/* line 44, ../sass/_curriculum.scss */
-#svg #debug use {
-  fill: #000;
-}
-/* line 50, ../sass/_curriculum.scss */
-#svg #dates-lines .horizontal .year {
-  -webkit-transform: translate(20px, 0);
-  -ms-transform: translate(20px, 0);
-  -o-transform: translate(20px, 0);
-  transform: translate(20px, 0);
-}
-/* line 55, ../sass/_curriculum.scss */
-#svg .year {
-  font-size: 28px;
-  font-weight: 700;
-  font-family: "Raleway", sans-serif;
+/* line 92, ../sass/_curriculum.scss */
+#svg .dateGroup .right .dateWrapper {
+  -webkit-transform: rotate(180deg);
+  -ms-transform: rotate(180deg);
+  -o-transform: rotate(180deg);
+  transform: rotate(180deg);
 }
 
 /* line 1, ../sass/_main.scss */
@@ -8752,4 +8796,25 @@ h1:after {
 .headlines h2 + h2 + h2 {
   background: #f40;
   color: #fff;
+}
+
+@media (max-width: 480px) {
+  /* line 48, ../sass/_header.scss */
+  h1 {
+    font-size: 40px;
+  }
+
+  /* line 51, ../sass/_header.scss */
+  h2 {
+    font-size: 20px;
+  }
+
+  /* line 54, ../sass/_header.scss */
+  .headlines {
+    display: block;
+  }
+  /* line 56, ../sass/_header.scss */
+  .headlines h2 {
+    display: none;
+  }
 }
