--- a/sass/_curriculum.scss
+++ b/sass/_curriculum.scss
@@ -53,7 +53,7 @@
 .dialog{
   background:#000;
   color:#fff;
- // display: none;
+  display: none;
   width:400px;
   max-width: 90%;
   height:300px;
